--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 
     },
     "autoload": {
-        "psr-0": {"BingAds": "./"},
+        "psr-0": {"BingAds": "src/"},
         "classmap": ["./"]
 
     }
